components/src/components/dropdown/dropdown.scss
@import "@scania/typography/dist/scss/mixins";
@import "@scania/typography/dist/scss/tokens";
@import "./dropdown-core";
@import "../../helpers/components-shared.scss";
@import "../checkbox/checkbox.scss";

:host,
::slotted(*) {
  --sdds-link: var(--sdds-grey-958);
  --sdds-link-text-decoration: none;

  @include type-style("detail-02");

  color: var(--sdds-grey-958);
  box-sizing: border-box;
}

:host {
  position: relative;
  z-index: auto;

  &::part(dropdown-filter-disabled) {
    cursor: not-allowed;
    caret-color: transparent;
    pointer-events: none;
    color: var(--sdds-grey-400);
    border: none;

    &::placeholder {
      color: var(--sdds-grey-400);
    }
  }
}

.sdds-dropdown {
  position: relative;
  display: flex;
  flex-flow: column wrap;
  width: 100%;
  border: 0;

  &,
  * {
    box-sizing: border-box;
  }

  .sdds-dropdown-toggle {
    @include dropdown-wrapper;

    display: flex;
    align-items: center;
  }

  .sdds-dropdown-toggle--selected:not(:focus) {
    border-bottom: 1px solid var(--sdds-grey-800);
  }

  .sdds-dropdown-arrow {
    width: 20px;
    position: absolute;
    right: 16px;
    color: inherit;
    transform: rotate(0);
    transition: transform ease 250ms;
  }

  .sdds-dropdown-placeholder {
    color: var(--sdds-grey-958);
  }

  .sdds-dropdown-label {
    display: grid;
    width: calc(100% - 25px);
  }

  .sdds-dropdown-label-container {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    &--label-inside {
      padding-bottom: 5px;
    }
  }

  &.sdds-dropdown.sdds-dropdown-sm {
    .sdds-dropdown-label-container--label-inside {
      padding-bottom: 12px;
    }
  }

  .sdds-dropdown-filter {
    border: 0;
    outline: none;

    @include type-style("detail-02");

    color: var(--sdds-grey-958);
    width: 100%;
    background: transparent;

    &:focus {
      outline: none;
    }

    &::placeholder {
      color: var(--sdds-grey-700);
    }

    &::input-placeholder {
      color: var(--sdds-grey-700);
    }

    &::placeholder {
      color: var(--sdds-grey-700);
      opacity: 1;
    }

    &::input-placeholder {
      color: var(--sdds-grey-700);
    }
  }

  &:has(span.sdds-dropdown-label-outside) {
    .sdds-dropdown-menu {
      margin-bottom: -24px;
    }
  }

  .sdds-dropdown-menu {
    z-index: 10000;

    @include sdds-scrollbar;

    background-color: var(--sdds-white);
    position: absolute;
    top: 100%;
    left: 0;
    min-width: 100%;
    max-height: 360px; // max 7 option items, then add scroll
    border-color: transparent;
    border-style: solid;
    border-width: 0 1px;
    box-shadow: 0 2px 3px 0 rgb(0 0 0 / 10%);
    border-left-color: var(--sdds-grey-100);
    border-right-color: var(--sdds-grey-100);
    overflow-x: hidden;
    overflow-y: auto;
    transform: scaleY(0);
    transform-origin: top;
    transition: transform 250ms ease;
  }

  // Size lg
  &.sdds-dropdown-lg {
    .sdds-dropdown-toggle {
      height: 56px;
    }
  }

  // Size md
  &.sdds-dropdown-md {
    .sdds-dropdown-toggle {
      height: 48px;
    }
  }

  // Size sm
  &.sdds-dropdown-sm {
    .sdds-dropdown-toggle {
      height: 40px;
    }
  }
}

:host(.sdds-dropdown--open-upwards) {
  .sdds-dropdown {
    .sdds-dropdown-menu {
      top: auto;
      bottom: 100%;
      box-shadow: 0 -1px 3px 0 rgb(0 0 0 / 10%);
      transform-origin: bottom;
    }
  }
}

:host([disabled="true"]) {
  cursor: not-allowed;

  .sdds-dropdown {
    .sdds-dropdown-toggle {
      pointer-events: none;
      color: var(--sdds-grey-400);
      border: none;
      padding: 0 16px;

      .sdds-dropdown-placeholder {
        color: var(--sdds-grey-400);
      }

      .sdds-dropdown-label-inside {
        color: var(--sdds-grey-400);
      }

      &:focus {
        &::before {
          content: none;
        }
      }
    }
  }
}

:host(.sdds-dropdown--error) {
  .sdds-dropdown {
    .sdds-dropdown-toggle {
      border-color: var(--sdds-negative);

      &:focus {
        &::before {
          border-color: var(--sdds-negative);
        }
      }
    }
  }

  .sdds-dropdown-helper {
    color: var(--sdds-negative);

    .sdds-dropdown-error-icon {
      display: flex;
    }
  }
}

// dropdown option
:host {
  ::slotted(sdds-dropdown-option) {
    display: flex;
    padding: var(--sdds-spacing-element-16);
    background-color: var(--sdds-dropdown-bg);
    border-top: 1px solid transparent;
    border-bottom: 1px solid var(--sdds-grey-100);
    opacity: 0;
    visibility: hidden;
    cursor: pointer;
    box-sizing: border-box;
  }

  ::slotted(sdds-dropdown-option:last-child) {
    border-bottom-color: transparent;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
  }

  ::slotted(sdds-dropdown-option:hover),
  ::slotted(sdds-dropdown-option:focus) {
    background-color: var(--sdds-dropdown-bg-hover);
  }

  ::slotted(sdds-dropdown-option:hover:not(:focus):not(sdds-dropdown-option.selected)) {
    background-color: var(--sdds-dropdown-bg-hover);
  }

  ::slotted(sdds-dropdown-option:hover:focus) {
    outline: none;
  }

  ::slotted(sdds-dropdown-option:focus) {
    @include sdds-focus-state;
  }

  ::slotted(sdds-dropdown-option.sdds-dropdown--selected),
  ::slotted(sdds-dropdown-option.selected),
  ::slotted(sdds-dropdown-option.active),
  ::slotted(sdds-dropdown-option:active) {
    background-color: var(--sdds-grey-300);
    border-top: 1px solid var(--sdds-grey-300);
    border-bottom: 1px solid var(--sdds-grey-300);
  }

  ::slotted(sdds-dropdown-option.sdds-option--no-result) {
    cursor: not-allowed;
    pointer-events: none;
  }
}

:host(.sdds-dropdown--open-upwards) {
  ::slotted(sdds-dropdown-option:first-child) {
    border-radius: 1rem 1rem 0 0;
  }

  ::slotted(sdds-dropdown-option:last-child) {
    border-radius: 0;
    border-bottom: 1px solid var(--sdds-grey-300);
  }
}

.sdds-option-label {
  margin: auto 0;
  display: flex;
  align-content: center;
  text-decoration: none;
  flex-grow: 2;
}

.sdds-option-checkmark {
  color: inherit;
  opacity: 0;
  transition: opacity 0.1s cubic-bezier(0.075, 0.82, 0.165, 1);
  margin-left: var(--sdds-spacing-element-16);
}

:host([size="sm"]) {
  ::slotted(sdds-dropdown-option) {
    padding: var(--sdds-spacing-element-12) var(--sdds-spacing-element-16);
  }
}

:host(.sdds-dropdown--open) {
  .sdds-dropdown {
    .sdds-dropdown-toggle {
      box-shadow: 0 -1px 3px -1px rgb(0 0 0 / 10%);
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;

      &.is-filter {
        &::before {
          content: " ";
          position: absolute;
          z-index: 2;
          bottom: 0;
          left: 0;
          width: 100%;
          border-bottom: 1px solid var(--sdds-blue-400);
        }
      }
    }

    .sdds-dropdown-arrow {
      transform: rotate(180deg);
    }

    .sdds-dropdown-menu {
      transform: scaleY(1);
    }
  }

  ::slotted(sdds-dropdown-option) {
    visibility: visible;
    opacity: 1;
  }
}

:host(.selected) {
  .sdds-option-checkmark {
    opacity: 1;
  }
}

.sdds-dropdown-label-inside {
  @include type-style("detail-02");

  color: var(--sdds-grey-958);
  position: absolute;
  transform: scaleY(1) translate(0, -6px);
  transition: transform 250ms ease, color 200ms ease;
  width: calc(100% - 63px);
  overflow: hidden;
  text-overflow: ellipsis;
}

:host(.sdds-dropdown--label-inside-position.sdds-dropdown--selected) {
  .sdds-dropdown-label {
    padding-top: 12px;
  }

  .sdds-dropdown-label-inside {
    color: var(--sdds-grey-700);
    transform: translate(0, -17.8px);
    font-size: calc(2.5rem);
    width: calc(100% - 64px);
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

.sdds-dropdown.sdds-dropdown-sm {
  .sdds-dropdown-label-inside {
    display: none;
  }
}

.sdds-dropdown-multiselect-result {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.sdds-option-checkbox {
  margin-right: 8px;
}

.sdds-form-label {
  display: flex;
}

